--- a/debian/control
+++ b/debian/control
@@ -2,15 +2,15 @@ Source: todoprint
 Section: unknown
 Priority: optional
 Maintainer: Marc Dougherty <muncus@gmail.com>
-Build-Depends: debhelper (>= 8.0.0)
+Build-Depends: debhelper (>= 8.0.0), dh-systemd
 Standards-Version: 3.9.4
-Homepage: <insert the upstream URL, if relevant>
+Homepage: https://github.com/muncus/todo-printer
 #Vcs-Git: git://git.debian.org/collab-maint/todoprint.git
 #Vcs-Browser: http://git.debian.org/?p=collab-maint/todoprint.git;a=summary
 
 Package: todoprint
 Architecture: all
-Depends: ${misc:Depends} python
+Depends: ${misc:Depends}, python
 Description: Experimental thermal receipt printer
  This is an experimental package for messing about with a Raspberry Pi and a
  thermal printer.
